--- a/Processing/pom.xml
+++ b/Processing/pom.xml
@@ -33,11 +33,14 @@
   <artifactId>generex</artifactId>
   <version>1.0.2</version>
 </dependency>
+
+<!-- https://mvnrepository.com/artifact/dk.brics.automaton/automaton -->
 <dependency>
-  <groupId>dk.brics</groupId>
-  <artifactId>automaton</artifactId>
-  <version>1.12-1</version>
+    <groupId>dk.brics.automaton</groupId>
+    <artifactId>automaton</artifactId>
+    <version>1.11-8</version>
 </dependency>
+
   </dependencies>
   <build>
     <sourceDirectory>src</sourceDirectory>
